--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <script src="%UNITY_WEBGL_LOADER_URL%"></script>
     <script>
-        
+        UnityLoader.SystemInfo.mobile = false;  // Workaround to force `UnityLoader` to actually load on mobile.
         window.gameInstance = UnityLoader.instantiate('gameContainer', '%UNITY_WEBGL_BUILD_URL%', {
           Module: {
             // `preserveDrawingBuffer` is needed for WebVR content to be mirrored to the `<canvas>`.
